<resources>
    <string name="app_name">Open Services</string>
    //My strings
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="messages">Messages</string>
    <string name="contracts">Contracts</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="remember_me">Remember me</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="signup">Sign up</string>
    <string name="reset">Reset</string>
    <string name="phone">Phone number</string>
    <string name="follow">Follow</string>
    <string name="contact_info">Contact info</string>
    <string name="report">Report</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="skip">Skip</string>
    <string name="confirm_password">Confirm password</string>
    <string name="country">Country</string>
    <string name="po_box">PO. Box</string>
    <string name="quarter">Quarter</string>
    <string name="region">Region</string>
    <string name="city">City</string>
    <string name="back">Back</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="unknown_error">Unknown error</string>
    <string name="retry">Retry</string>
    <string name="main_activity">Main activity</string>
    <string name="title_activity">Title Activity</string>
    <string name="choose_birth_date">Choose birth date</string>
    <string name="please_check_your_internet_connexion">Please check your internet connexion</string>
    <string name="search">Search</string>
    <string name="jobs">Jobs</string>
    <string name="filter">Filter</string>
    <string name="don_t_have_account">Don\'t have account ?</string>
    <string name="business">Business</string>
    <string name="person">Person</string>
    <string name="have_an_account">Have an account ?</string>
    <string name="sign_up_as">Sign up as</string>
    <string name="admin">Admin</string>
    <string name="Button">button</string>
    <string name="profile_details">Profile details</string>
    <string name="bio">Bio</string>
    <string name="skills">Skills</string>
    <string name="extra">Extra</string>
    <string name="job_details">Job details</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="medias">Medias</string>
    <string name="comments">Comments</string>
    <string name="requester">Requester</string>
    <string name="add_basic_info">Add basic info</string>
    <string name="add_location_info">Add location info</string>
    <string name="add_address_info">Add address info</string>
    <string name="add_business_info">Add business info</string>
    <string name="add_activities_info">Add activities info</string>
    <string name="finishing">Finishing</string>
    <string name="add_mail_info">Add mail info</string>
    <string name="salary">Salary</string>
    <string name="posted">Posted</string>
    <string name="works">Works</string>
    <string name="apply_candidate">Apply candidate</string>
    <string name="look_contract">Look contract</string>
    <string name="please_sign_in_to_get_more_info">Please sign in to get more info</string>
    <string name="end_date">End date</string>
    <string name="search_publication">Search publications</string>
    <string name="search_provider">Search providers</string>
    <string name="search_requester">Search requesters</string>
    <string name="publications">Publications</string>
    <string name="requesters">Requesters</string>
    <string name="providers">Providers</string>
    <string name="apply">Apply</string>
    <string name="autocomplete_search">Autocomplete search</string>
    <string name="filter_settings">Filter settings</string>
    <string name="edit">Edit</string>
    <string name="my_account">My account</string>
    <string name="post_details">Post details</string>
    <string name="my_provider_account">My provider account</string>
    <string name="my_requester_account">My requester_account</string>
    <string name="add_post">Add post</string>
    <string name="title">Title</string>
</resources>