<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_menu_contract"
        android:contentDescription="@string/contracts"
        android:icon="@drawable/ic_contract"
        android:iconTint="@color/main_color_200"
        android:title="@string/contracts" />
    <item
        android:id="@+id/bottom_menu_search"
        android:checked="true"
        android:contentDescription="@string/works"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_work_24"
        android:iconTint="@color/main_color_200"
        android:title="@string/works" />
    <item
        android:id="@+id/bottom_menu_account"
        android:contentDescription="@string/account"
        android:icon="@drawable/ic_account"
        android:iconTint="@color/main_color_200"
        android:title="@string/account" />
</menu>