<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    style="@style/RoundedMainBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:id="@+id/linear_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Filter settings"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/text_title"
                android:textColor="@color/main_color_200"
                android:textStyle="bold"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_margin="10dp"
                />
        </LinearLayout>
        <RadioGroup
            android:id="@+id/radio_group"
            android:checkedButton="@+id/radio_button_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_title"
            android:layout_margin="10dp">
            <RadioButton
                android:id="@+id/radio_button_publications"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/publications"
                android:checked="true"
                android:layout_margin="5dp"/>
            <RadioButton
                android:id="@+id/radio_button_requesters"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/requesters"
                android:layout_margin="5dp"/>
            <RadioButton
                android:id="@+id/radio_button_providers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/providers"
                android:layout_margin="5dp"/>
        </RadioGroup>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/linear_no_permissions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        >
        <CheckBox
            android:id="@+id/checkbox_autocomplete_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="false"
            android:text="@string/autocomplete_search"
            android:layout_margin="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cancel"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:ellipsize="end"
            android:linksClickable="true"
            android:maxLines="1"
            android:layout_margin="10dp"
            android:text="@string/cancel"
            app:backgroundTint="@color/red_200"
            android:layout_gravity="center"
            android:gravity="center" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_save"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:ellipsize="end"
            android:linksClickable="true"
            android:maxLines="1"
            android:layout_margin="10dp"
            android:text="@string/apply"
            app:backgroundTint="@color/main_color_200"
            android:layout_gravity="center"
            android:gravity="center" />

    </LinearLayout>
</LinearLayout>