<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/MainBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.account.onboarding.createaccount.SignUpCvInfoFragment">

        <androidx.core.widget.NestedScrollView
            style="@style/MainBackground"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/button_next"
            app:layout_constraintTop_toBottomOf="@+id/button_skip">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_sign_up_main_activity"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/main_activity"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    app:errorEnabled="true"
                    android:soundEffectsEnabled="true"
                    app:hintAnimationEnabled="true"
                    app:layout_constraintBottom_toTopOf="@+id/text_input_layout_sign_up_title_activity"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_main_activity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:text="@{userToSignUp.cv.main_activity}"
                        app:textInputLayoutFocusedRectEnabled="true" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_sign_up_title_activity"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/title_activity"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    app:errorEnabled="true"
                    android:soundEffectsEnabled="true"
                    app:hintAnimationEnabled="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_title_activity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:text="@{userToSignUp.cv.title}"
                        app:textInputLayoutFocusedRectEnabled="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/text_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textAllCaps="true"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/text_sub_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

                <TextView
                    android:id="@+id/text_sub_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/add_activities_info"
                    android:textSize="@dimen/text_detail"
                    app:layout_constraintBottom_toTopOf="@+id/text_input_layout_sign_up_main_activity"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="20dp"
                    app:layout_constraintBottom_toTopOf="@+id/text_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/diamond_icon" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_back"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:autoLink="all"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="@color/main_color_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:rippleColor="@color/light_300" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_skip"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:autoLink="all"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/skip"
            android:textAllCaps="false"
            android:textColor="@color/main_color_200"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="@color/light_300" />
        <LinearLayout
            android:id="@+id/linear_dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/button_next"
            app:layout_constraintEnd_toStartOf="@+id/button_next"
            app:layout_constraintStart_toEndOf="@+id/button_back"
            app:layout_constraintTop_toTopOf="@+id/button_next">

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="@dimen/dot_size"
                android:layout_height="@dimen/dot_size"
                android:layout_margin="2dp"
                android:src="@color/light_400"
                app:riv_corner_radius="@dimen/dot_size" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="@dimen/dot_size"
                android:layout_height="@dimen/dot_size"
                android:layout_margin="2dp"
                android:src="@color/light_400"
                app:riv_corner_radius="@dimen/dot_size" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="@dimen/dot_size"
                android:layout_height="@dimen/dot_size"
                android:layout_margin="2dp"
                android:src="@color/light_400"
                app:riv_corner_radius="@dimen/dot_size" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="@dimen/dot_size"
                android:layout_height="@dimen/dot_size"
                android:layout_margin="2dp"
                android:src="@color/main_color_200"
                app:riv_corner_radius="@dimen/dot_size" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="@dimen/dot_size"
                android:layout_height="@dimen/dot_size"
                android:layout_margin="2dp"
                android:src="@color/light_400"
                app:riv_corner_radius="@dimen/dot_size" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="@dimen/dot_size"
                android:layout_height="@dimen/dot_size"
                android:layout_margin="2dp"
                android:src="@color/light_400"
                app:riv_corner_radius="@dimen/dot_size" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_next"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:autoLink="all"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/main_color_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:rippleColor="@color/light_300" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <variable
            name="userToSignUp"
            type="com.example.openservices.models.User" />
    </data>
</layout>