<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="isLoadingMore"
            type="Boolean" />
        <import type="android.view.View"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.search.SearchWorksFragment">
        <LinearLayout
            android:id="@+id/linear_tab_bar"
            style="@style/TabBackground"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@string/jobs"
                android:textSize="@dimen/text_title"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/image_button_search"
                style="@style/IconCircleClickableStyle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:clickable="true"
                android:contentDescription="@string/search"
                android:focusable="true"
                android:padding="2dp"
                android:src="@drawable/ic_search" />

            <ImageView
                android:id="@+id/image_button_filter"
                style="@style/IconCircleClickableStyle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:clickable="true"
                android:contentDescription="@string/filter"
                android:focusable="true"
                android:padding="2dp"
                android:src="@drawable/ic_round_format_list_bulleted_24" />

        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_tab_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_search_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/CustomScrollBar"
                android:orientation="vertical"
                android:clipToPadding="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/progress_circular"
                android:paddingBottom="10dp"
                />
            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progress_circular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:indicatorColor="@color/main_color_200"
                android:indeterminate="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="@dimen/application_margin"
                app:minHideDelay="500"
                android:visibility="@{isLoadingMore ? View.VISIBLE : View.INVISIBLE, default=gone}"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>