<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/MainBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.account.SignInFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:id="@+id/relative_go_to_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/application_margin"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_go_to_sign_up"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="end"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_toEndOf="@+id/text_no_account"
                        android:layout_toRightOf="@+id/text_no_account"
                        android:autoLink="all"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/sign_in"
                        android:textAllCaps="false"
                        android:textColor="@color/blue_200"
                        app:rippleColor="@color/light_300" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/text_no_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/have_an_account" />
                </RelativeLayout>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_text_email"
                    style="@style/CustomEditText"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_margin="@dimen/application_margin"
                    android:hint="@string/email"
                    android:inputType="textEmailSubject"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColorHint="@color/light_600"
                    app:layout_constraintBottom_toTopOf="@+id/button_reset_password"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="20dp"
                    app:layout_constraintBottom_toTopOf="@+id/edit_text_email"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/logo" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_reset_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/application_margin"
                    android:text="@string/reset"
                    app:backgroundTint="@color/main_color_200"
                    app:cornerRadius="5dp"
                    app:layout_constraintBottom_toTopOf="@+id/relative_go_to_sign_up"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/progress_reset_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:progress="20"
                    android:visibility="@{isLoadingReset ? View.VISIBLE : View.GONE, default=gone}"
                    app:indicatorColor="@color/main_color_200"
                    app:layout_constraintBottom_toBottomOf="@+id/button_reset_password"
                    app:layout_constraintLeft_toLeftOf="@+id/button_reset_password"
                    app:layout_constraintRight_toRightOf="@+id/button_reset_password"
                    app:layout_constraintTop_toTopOf="@+id/button_reset_password" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <import type="android.view.View" />

        <variable
            name="isLoadingReset"
            type="Boolean" />
    </data>
</layout>